--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
+    "@angular/animations": "^6.1.1",
+    "@angular/cdk": "^6.4.2",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.2",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@swimlane/ngx-charts": "^9.0.0",
+    "@types/d3-shape": "^1.2.3",
     "core-js": "^2.5.4",
+    "d3": "^5.5.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
